# insta-dl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docker.yml  docs.yml  lint.yml  release-please.yml  release.yml  tests.yml
docs/: architecture.md  backends.md  basic-usage.md  cli-reference.md  comparison.md  demo.tape  index.md  installation.md  python-api.md  troubleshooting.md
examples/: README.md  filter_by_date.py  hashtag_sample.py  sync_profiles.py
insta_dl/: __init__.py  backend.py  cdn.py  cli.py  downloader.py  exceptions.py  filestore.py  filter_expr.py  latest_stamps.py  models.py  retry.py
insta_dl/backends/: __init__.py  _aiograpi_map.py  _hiker_map.py  aiograpi_backend.py  hiker.py
tests/: test_aiograpi_backend.py  test_aiograpi_map.py  test_cli.py  test_cli_run.py  test_downloader.py  test_downloader_integration.py  test_edges.py  test_filestore.py  test_filter_expr.py  test_hardening.py  test_hiker_backend.py  test_hiker_backend_http.py  test_hiker_map.py  test_latest_stamps.py  test_retry.py
