[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instagram-dl"
version = "0.0.1"
description = "Async Instagram downloader CLI — profiles, posts, reels, stories, highlights, hashtags, comments. Pluggable backends (HikerAPI / aiograpi)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "subzeroid" }]
keywords = [
    "instagram",
    "instagram-downloader",
    "instagram-scraper",
    "downloader",
    "hikerapi",
    "aiograpi",
    "async",
    "cli",
    "osint",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "hikerapi",
    "aiograpi",
]

[project.urls]
Homepage = "https://subzeroid.github.io/insta-dl/"
Documentation = "https://subzeroid.github.io/insta-dl/"
Repository = "https://github.com/subzeroid/insta-dl"
Issues = "https://github.com/subzeroid/insta-dl/issues"
Changelog = "https://github.com/subzeroid/insta-dl/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
]
lint = [
    "ruff>=0.6",
    "mypy>=1.11",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10",
]

[project.scripts]
insta-dl = "insta_dl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["insta_dl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["insta_dl"]
omit = ["insta_dl/backends/aiograpi_backend.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # do not perform function call in argument defaults
    "SIM108", # ternary vs if/else — readability judgement call
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017"]  # pytest.raises patterns

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true  # hikerapi / aiograpi upstream has no stubs

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
